# gpt-cli

./: Cargo.toml  LICENSE  README.md
src/: main.rs
