[package]
name = "gpt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-openai = "0.18.0"
futures = "0.3.30"
tokio = { version = "1.35.1", features = ["full"] }
tiktoken-rs = { version = "0.5.8", features = ["async-openai"] }
